[project]
name            = 'umaudemc'
version         = '0.14.0'
description     = 'Unified Maude model-checking utility'
license.text    = 'GPLv3'
classifiers     = [
	'Programming Language :: Python :: 3',
	'Intended Audience :: Science/Research',
	'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
	'Topic :: Scientific/Engineering',
	'Operating System :: OS Independent',
]
requires-python = '>=3.9'
dependencies    = ['maude >= 1.0']

[[project.authors]]
name  = 'ningit'
email = 'ningit@users.noreply.github.com'

[project.readme]
content-type = 'text/markdown'
text = '''# Unified Maude model-checking tool

Uniform interface for model checking LTL, CTL, CTL*, and μ-calculus properties
on standard and [strategy](https://maude.ucm.es/strategies)-controlled
[Maude](https://maude.cs.illinois.edu) specifications using built-in and
external backends. Models can also be extended with quantitative information
and be applied probabilistic and statistical model-checking techniques.

This tool can be used from the command line, from a graphical user interface,
and as a Python library. See the
[repository](https://github.com/fadoss/umaudemc) for additional information,
documentation, and examples.'''

[project.optional-dependencies]
CTLStar = ['pyModelChecking >= 1.3.3']
YAML    = ['pyaml']
Plot    = ['matplotlib']
SMC     = ['scipy']

[project.urls]
"Homepage"      = 'https://github.com/fadoss/umaudemc'
"Bug Tracker"   = 'https://github.com/fadoss/umaudemc/issues'
"Documentation" = 'https://github.com/fadoss/umaudemc'
"Source Code"   = 'https://github.com/fadoss/umaudemc'

[project.scripts]
umaudemc = 'umaudemc.__main__:main'

[build-system]
requires      = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages.find.include = ['umaudemc*']
package-data.umaudemc = ['data/*']
